# llvm-17-exercise

Chapter04/tinylang/include/tinylang/CodeGen/: CGModule.h  CGProcedure.h  CodeGenerator.h
Chapter04/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CodeGenerator.cpp
Chapter04/tinylang/tools/driver/: Driver.cpp
Chapter05/tinylang/include/tinylang/AST/: AST.h  ASTContext.h
Chapter05/tinylang/include/tinylang/CodeGen/: CGModule.h
Chapter05/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp
Chapter06/tinylang/lib/CodeGen/: CGModule.cpp
Chapter09/buildjit/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Chapter09/jit/: CMakeLists.txt  JIT.cpp  JIT.h  main.ll
Chapter09/lljit/: AST.h  CMakeLists.txt  CodeGen.cpp  CodeGen.h
